fix bug by sonarlint