@@ -7,9 +7,7 @@ import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import javax.swing.event.ListDataEvent;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -20,13 +18,12 @@ public class CityService {
     public List<CityListResponse> getAllCities() {
         List<City> cities = cityRepository.findAll();
 
-        List<CityListResponse> cityListDTO = cities.stream()
+        return cities.stream()
                 .map(city -> {
                     CityListResponse response = modelMapper.map(city, CityListResponse.class);
                     response.setId(city.getId());
                     response.setName(city.getName());
                     return response;
-                }).collect(Collectors.toList());
-        return cityListDTO;
+                }).toList();
     }
 }
